working on small issues with margins and padding

--- a/src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss
+++ b/src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss
@@ -163,7 +163,7 @@ $tabletMax: px-em(979);
   .span7 .editorial-chapters-container.text-mode .thumb-nav {width:470px;}
 }
 
-@media (min-width: 960px) {
+@media (min-width: 910px) {
   .container,
   .span12 {
     & > .editorial-chapters-container {
@@ -173,12 +173,14 @@ $tabletMax: px-em(979);
 
   .editorial-chapters-container {
     .thumb-nav {
+      
       .left-shade,
       .right-shade {
         display:none !important; // have to use important to override element.styles
       }
-    }
-  }
+
+    } // end .thumb-nav
+  } // end .editorial-chapters-container
       
 }
 
